Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2964

Summarize output when GetFlags returns InvalidArgument

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.11.0
    • 1.12.0
    • ksck

    Description

      If running a new ksck against a cluster that doesn't support GetFlags RPC calls, the output looks something like this:

      ...
      unable to get flag information for tablet server c3f2cbaee6bf495894fb94cbeb691111 (004.mydomain.local:7050): Invalid argument: Call on service kudu.server.GenericService received at 172.22.152.35:7050 from 172.22.152.225:43560 with an invalid method name: GetFlags
      unable to get flag information for tablet server f21b89d724714c5aba893ff305f5bb1e (068.mydomain.local:7050): Invalid argument: Call on service kudu.server.GenericService received at 172.22.152.99:7050 from 172.22.152.225:42872 with an invalid method name: GetFlags
      unable to get flag information for tablet server f2819966d33d4f7ea0be9e80e6668c93 (059.mydomain.local:7050): Invalid argument: Call on service kudu.server.GenericService received at 172.22.152.90:7050 from 172.22.152.225:56270 with an invalid method name: GetFlags
      tserver flag check error: 93 of 93 tservers' flags were not available
      

      It'd be nicer if we just summarized the unavailability (or throttled the responses) to avoid the spew.

      Attachments

        Activity

          People

            bankim Bankim Bhavsar
            adar Adar Dembo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: